Moved images to a subdirectory

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="toolbar">
         <icon-trigger tooltip="Project settings" 
-            src="build-white-18dp.svg" name="cat" 
+            src="demo_data/build-white-18dp.svg" name="cat" 
             onclick="alert('settings')" disabled>
         </icon-trigger>
         <dropdown-select>
@@ -49,9 +49,9 @@
             <span>o<b>ran</b>ge</span>
         </dropdown-select>
         <icon-toggle tooltip="Message events" 
-            src="sms_failed-white-18dp.svg" name="duck" value="quack">
+            src="demo_data/sms_failed-white-18dp.svg" name="duck" value="quack">
         </icon-toggle>
-        <icon-toggle tooltip="Timers" src="watch_later-white-18dp.svg" 
+        <icon-toggle tooltip="Timers" src="demo_data/watch_later-white-18dp.svg" 
             name="duck" value="quack"></icon-toggle>
         <trigger-set>
             <span active onclick="console.log('bugs')">Build + run</span>
